Add volume bar and update readme
Audio Settings Integration: Added native "MCAPIBridge Audio" volume slider in Minecraft's Sound Options menu.
README Update:Fix the date time error:2025->2026.I'm still living in the past lol.

--- a/MCAPIBridge/src/main/resources/assets/mcapibridge/lang/en_us.json
+++ b/MCAPIBridge/src/main/resources/assets/mcapibridge/lang/en_us.json
@@ -1,5 +1,6 @@
 ﻿{
-  "category.mcapibridge": "MCAPI Bridge Controls",
+  "mcapibridge.options.customAudioVolume": "MCAPIBridge Audio",
+  "category.mcapibridge": "MCAPIBridge",
   "key.mcapibridge.macro1": "Macro Key 1",
   "key.mcapibridge.macro2": "Macro Key 2",
   "key.mcapibridge.macro3": "Macro Key 3",
