Update Custom Screen And Fix Bugs
Custom Screen System: Introduced mcapibridge:screen block for displaying real-time images and video streams.
Video Wall: Supports seamless multi-block screen assembly with automatic layout detection.
High-Res Streaming: Capable of streaming 1080p/720p content at 30 FPS via JPG/PNG compression.
Easy Config: Right-click with a stick to open a GUI for setting Screen IDs.
Audio Optimization: Added audio.clone command to efficiently replicate audio sources for multi-speaker setups (e.g., surround sound cinemas) without re-uploading data.
Bugs fixed:
Fix audio on play3d witch can't set volume to 0 automatically.
Fix socket can still keep connected with bridges sometimes.

--- a/MCAPIBridge/src/main/resources/assets/mcapibridge/lang/en_us.json
+++ b/MCAPIBridge/src/main/resources/assets/mcapibridge/lang/en_us.json
@@ -1,9 +1,24 @@
 ﻿{
+  "block.mcapibridge.screen": "Custom Screen",
+  "block.mcapibridge.screen.desc": "Displays images or videos controlled by scripts.",
   "mcapibridge.options.customAudioVolume": "MCAPIBridge Audio",
   "category.mcapibridge": "MCAPIBridge",
   "key.mcapibridge.macro1": "Macro Key 1",
   "key.mcapibridge.macro2": "Macro Key 2",
   "key.mcapibridge.macro3": "Macro Key 3",
   "key.mcapibridge.macro4": "Macro Key 4",
-  "key.mcapibridge.macro5": "Macro Key 5"
+  "key.mcapibridge.macro5": "Macro Key 5",
+
+  "mcapibridge.gui.title": "Screen Configuration",
+  "mcapibridge.gui.label.id": "Screen ID (Number):",
+  "mcapibridge.gui.input.id": "Screen ID",
+  "mcapibridge.gui.button.save": "Save & Apply",
+  "mcapibridge.gui.error.nan": "ID must be a number",
+
+  "mcapibridge.msg.welcome.1":"§bWelcome to MCAPIBridge !",
+  "mcapibridge.msg.welcome.2":"Use bridges(like Python) to control",
+  "mcapibridge.msg.welcome.3":"§aConnect to the server IP at the port 4711",
+
+  "mcapibridge.msg.config.success": "§aScreen Configured! Size: %dx%d ID: %d",
+  "mcapibridge.msg.config.error.shape": "§cError: Irregular shape! Detected %d blocks, expected %d."
 }
