--- a/MCAPIBridge/src/main/resources/assets/mcapibridge/lang/zh_cn.json
+++ b/MCAPIBridge/src/main/resources/assets/mcapibridge/lang/zh_cn.json
@@ -1,9 +1,24 @@
 ﻿{
+  "block.mcapibridge.screen": "自定义屏幕",
+  "block.mcapibridge.screen.desc": "可通过脚本控制显示图片或视频。",
   "mcapibridge.options.customAudioVolume": "MCAPIBridge 音量",
   "category.mcapibridge": "MCAPIBridge",
   "key.mcapibridge.macro1": "自定义宏按键 1",
   "key.mcapibridge.macro2": "自定义宏按键 2",
   "key.mcapibridge.macro3": "自定义宏按键 3",
   "key.mcapibridge.macro4": "自定义宏按键 4",
-  "key.mcapibridge.macro5": "自定义宏按键 5"
+  "key.mcapibridge.macro5": "自定义宏按键 5",
+
+  "mcapibridge.gui.title": "屏幕配置",
+  "mcapibridge.gui.label.id": "设置 ID (数字):",
+  "mcapibridge.gui.input.id": "屏幕 ID",
+  "mcapibridge.gui.button.save": "保存并应用",
+  "mcapibridge.gui.error.nan": "ID 必须为数字",
+
+  "mcapibridge.msg.welcome.1":"§b欢迎来到 MCAPIBridge !",
+  "mcapibridge.msg.welcome.2":"使用桥接语言(如Python)来控制游戏",
+  "mcapibridge.msg.welcome.3":"§a连接到服务端IP，端口为4711",
+
+  "mcapibridge.msg.config.success": "§a屏幕配置成功！尺寸: §a%d§ax%d§a ID: %d",
+  "mcapibridge.msg.config.error.shape": "§c配置失败：形状不规则 (检测到 §c%d§c，需要 §c%d)"
 }
