Fix Audio And Screen Bugs And Examples
Audio & Video Dimension Support: Implemented dimension-aware playback. Screens and 3D audio now correctly isolate between Overworld, Nether, and End.
Hot-Join & Resume Playback: Added state persistence and offset synchronization. New players joining the server will automatically receive audio data and resume playback in perfect sync with the video.
Sync Adjustment: Added a slider in the audio settings to manually adjust audio latency compensation (+/- 5.00s).

--- a/MCAPIBridge/src/main/resources/assets/mcapibridge/lang/en_us.json
+++ b/MCAPIBridge/src/main/resources/assets/mcapibridge/lang/en_us.json
@@ -20,5 +20,6 @@
   "mcapibridge.msg.welcome.3":"§aConnect to the server IP at the port 4711",
 
   "mcapibridge.msg.config.success": "§aScreen Configured! Size: %dx%d ID: %d",
-  "mcapibridge.msg.config.error.shape": "§cError: Irregular shape! Detected %d blocks, expected %d."
+  "mcapibridge.msg.config.error.shape": "§cError: Irregular shape! Detected %d blocks, expected %d.",
+  "mcapibridge.options.audioSync": "Audio Sync Offset"
 }
