Update Physical IO System
Physical IO System: Added mcapibridge:io block for bridging Redstone with external IO.
Input Mode: Control in-game Redstone power from Python scripts.
Output Mode: Monitor in-game Redstone power changes in Python scripts.
Interactive Config: Right-click to open a GUI for setting Channel ID and Mode.
Visual Feedback: Block texture changes based on mode (Input/Output).

--- a/MCAPIBridge/src/main/resources/assets/mcapibridge/lang/en_us.json
+++ b/MCAPIBridge/src/main/resources/assets/mcapibridge/lang/en_us.json
@@ -21,5 +21,20 @@
 
   "mcapibridge.msg.config.success": "§aScreen Configured! Size: %dx%d ID: %d",
   "mcapibridge.msg.config.error.shape": "§cError: Irregular shape! Detected %d blocks, expected %d.",
-  "mcapibridge.options.audioSync": "Audio Sync Offset"
+  "mcapibridge.options.audioSync": "Audio Sync Offset",
+
+  "block.mcapibridge.io": "IO Port",
+  "block.mcapibridge.io.desc": "Connects Redstone signals with external scripts.",
+
+  "mcapibridge.gui.io.title": "IO Configuration",
+  "mcapibridge.gui.io.label.id": "Channel ID:",
+  "mcapibridge.gui.io.label.mode": "Mode:",
+  "mcapibridge.gui.io.mode.output": "Output (MC -> Bridges)",
+  "mcapibridge.gui.io.mode.input": "Input (Bridges -> MC)",
+  "mcapibridge.gui.io.button.save": "Save",
+  "mcapibridge.gui.io.error.nan": "ID must be a number",
+
+  "mcapibridge.msg.io.success": "§aIO Configured: ID %d",
+  "mcapibridge.msg.io.switch": "IO Mode: %s §7(ID: %d)",
+  "mcapibridge.msg.io.info": "§eCurrent IO ID: §f%d  "
 }
